--- a/app/views/layouts/_similar_tours_block.html.haml
+++ b/app/views/layouts/_similar_tours_block.html.haml
@@ -1,6 +1,6 @@
 - unless @tours.nil?
   .tours-block
-    %h2Наши предложения
+    %h2 Похожие предложения
     .masonry-block
       - @tours.each do |tour|
         .tours-item
