--- a/app/assets/stylesheets/import/main.sass
+++ b/app/assets/stylesheets/import/main.sass
@@ -15,7 +15,31 @@ body
 .notice
   text-align: center
   width: 640px
-  margin-left: 120px
+#error_explanation
+  color: red
+.error
+  margin-left: 16px
+  color: red
+.order
+  width: 400px
+  margin: 0 auto
+.order-button
+  width: 200px
+  color: #ffffff
+  font-size: 16px
+    float: left
+  border-style: solid
+  border-width: 1px
+  border-color: rgb(86, 131, 166)
+  border-radius: 12px
+  background-image: -moz-linear-gradient(90deg, rgb(76, 138, 186) 0%, rgb(143, 190, 226) 100%)
+  background-image: -webkit-linear-gradient(90deg, rgb(76, 138, 186) 0%, rgb(143, 190, 226) 100%)
+  background-image: -ms-linear-gradient(90deg, rgb(76, 138, 186) 0%, rgb(143, 190, 226) 100%)
+  width: 141px
+  height: 40px
+  text-align: center
+  line-height: 40px
+  margin-top: 15px
 .container
   width: 960px
   margin: 0 auto
@@ -45,7 +69,7 @@ body
 
 
 
-.button
+.down-panel-button
   float: left
   border-style: solid
   border-width: 1px
@@ -135,15 +159,14 @@ body
   width: 640px
   float: left
 .tours-block
+  margin-bottom: 52px
   h2
     font-size: 16px
-    margin: 0
+    margin: 0 0 31px 0
     line-height: 10px
-    padding-bottom: 31px
   p
     font-size: 16px
-    padding-top: 4px
-    margin: 0
+    margin: 4px 0 0 0
   h3
     font-size: 16px
     margin: 0
@@ -152,21 +175,15 @@ body
   span
     font-size: 16px
     line-height: 3px
-  padding-bottom: 52px
 .tours-block:last-child
-  padding-bottom: 36px
+  margin-bottom: 0px
 .tours-item
   width: 282px
   display: inline-block
   margin-right: 28px
   margin-bottom: 28px
-
-.right
-  float: left
-  width: 320px
-  //padding-top: 36px
 .country-block
-  padding-bottom: 26px
+  margin-bottom: 26px
   ul
     margin: 0
     li
@@ -178,36 +195,40 @@ body
         margin-right: 8px
       a
         font-size: 16px
+.right
+  float: left
+  width: 320px
+  //padding-top: 36px
+
 .tour-type
   width: 291px
   h2
-    margin: 0
+    margin: 0 0 26px
     font-size: 16px
     line-height: 10px
-    padding-bottom: 19px
   ul
     margin: 0
     li
       list-style-type: none
-      line-height: 30px
+      margin: 7px 0 10px 0
       a
         font-size: 16px
-        //line-height: 15px
+        line-height: 15px
 
-  padding-bottom: 40px
+  margin-bottom: 45px
 
 .news
   width: 291px
   h2
-    margin: 0
+    margin: 0 0 25px 0
     font-size: 16px
     line-height: 10px
-    padding-bottom: 25px
   ul
     padding: 0
     margin: 0
     li
       list-style-type: none
+      margin-bottom: 19px
       span
         font-size: 14px
         color: #a7a7a7
@@ -215,8 +236,7 @@ body
         font-size: 14px
         font-weight: normal
         line-height: 18px
-        margin-top: 0
-        margin-bottom: 22px
+        margin: 0
   p
     font-weight: bold
 .footer-panel
@@ -280,7 +300,7 @@ body
   h2
     font-size: 16px
     line-height: 10px
-    padding-bottom: 25px
+    margin-bottom: 35px
 .attention-item
   margin-bottom: 13px
   min-height: 60px
@@ -290,7 +310,9 @@ body
     height: 60px
 .attention-info
   float: left
+  width: 188px
   margin-left: 13px
+  padding-bottom: 2px
   h3
     font-size: 14px
     font-weight: normal
@@ -307,270 +329,112 @@ body
     font-size: 16px
     line-height: 10px
     padding-bottom: 25px
+  p
+    font-size: 16px
+  span
+    font-size: 13px
+    margin-bottom: 10px
+.m-phone
+  background: url("/assets/m-phone.png") no-repeat
+  padding-left: 28px
+  margin-bottom: 10px
+.m-email
+  background: url("/assets/m-email.png") no-repeat
+  padding-left: 25px
+.show-tour-left
+  margin-top: -17px
 .show-tour
+  width: 560px
+  margin-bottom: 30px
   h1
-    margin-bottom: 38px
+    margin-bottom: 28px
     font-size: 27px
-    line-height: 1px
+    line-height: 26px
+.tour-info
+  margin-bottom: 30px
+  padding-bottom: 20px
+  background-color: #e9f1f6
+  width: 560px
+  //img
+  //  margin-bottom: 29px
+  span
+    font-size: 20px
+    margin-left: 21px
+.fotorama
+  margin-bottom: 29px
+  box-shadow: 0 0 5px gray
+.tour-button
+  border-style: solid
+  border-width: 1px
+  border-color: rgb( 86, 131, 166 )
+  border-radius: 12px
+  background-image: -moz-linear-gradient( 90deg, rgb(76,138,186) 0%, rgb(143,190,226) 100%)
+  background-image: -webkit-linear-gradient( 90deg, rgb(76,138,186) 0%, rgb(143,190,226) 100%)
+  background-image: -ms-linear-gradient( 90deg, rgb(76,138,186) 0%, rgb(143,190,226) 100%)
+  width: 101px
+  height: 40px
+  text-align: center
+  line-height: 40px
+  margin: -31px 0 0 284px
+  a
+    font-size: 16px
+    color: #ffffff
+    text-decoration: none
+
 .show-tour-right
-  padding-top: 10px
+  padding-top: 8px
+.share
+  display: inline-block
+  margin-top: 15px
+
+.share_vk, .share_gp, .share_fb, .share_tw
+  float: left
+.visas
+  h1
+    line-height: 24px
+  ul
+    margin: 0
+    li
+      margin-bottom: 10px
+      list-style-type: none
+.news-show
+  h2
+    line-height: 24px
+    font-size: 20px
+.news-date
+  font-style: oblique
+  text-align: right
+
+.all-news-link
+  margin-top: 20px
+.all-tour
+  padding-bottom: 20px
+  margin-bottom: 20px
+  border-bottom: 1px solid #d4e2ee
+  img
+    float: left
+    width: 140px
+    height: 89px
+.all-tour-info
+  width: 423px
+  float: left
+  margin-left: 10px
+  h2
+    font-size: 18px
+    line-height: 20px
+.all-news
+  dl
+    margin-bottom: 40px
+    dt
+      margin-bottom: 10px
+    dd
+      margin-bottom: 10px
+      //span
+      //  font-style: oblique
+      //  text-align: right
+.order
+  h2
+    font-size: 15px
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-//
-//  a
-//    font-size: 16px
-//    font-family: "Arial"
-//    color: rgb(255, 255, 255)
-//    font-weight: bold
-//.phone
-//  font-size: 13px
-//  font-family: "Arial"
-//  color: rgb( 131, 131, 131 )
-//  margin: 15px 0px 0px 322px
-//  width: 300px
-//.number
-//  font-size: 15px
-//  font-family: "Arial"
-//  color: rgb( 0, 0, 0 )
-//  width: 268px
-//  padding-right: 12px
-//
-//.adress
-//  margin: -60px 0px 0px 623px
-//  font-size: 13px
-//  font-family: "Arial"
-//  color: rgb( 131, 131, 131 )
-//  width: 400px
-////margin-left: 631px
-//.adress_line
-//  font-size: 15px
-//  font-family: "Arial"
-//  width: 400px
-//  height: 15px
-//  a
-//    color: rgb( 14, 96, 160 )
-//    text-decoration: underline
-//
-//
-//.active_panel
-//  height: 341px
-//  background-image: url("/assets/bg-active.png")
-//  width: 1400px
-//
-//.active_text
-//  font-size: 15px
-//  font-family: "Arial"
-//  color: rgb(0, 0, 0)
-//  line-height: 1.333
-//  margin: 45px 0px 0px 120px
-//  width: 357px
-//  height: 275px
-//.active_content
-//  height: 275px
-//  overflow: auto
-//
-////.active_title
-////  font-weight: bold !important
-//
-//.active_right
-//  background-color: white
-//  width: 560px
-//  height: 272px
-//  margin: -288px 0 0 521px
-//  box-shadow: 0 0 5px gray
-//
-//.right_title
-//  font-size: 27px
-//  font-family: "Arial"
-//  margin: -241px 0px 0px 300px
-//  a
-//    color: rgb( 14, 96, 160 )
-//    text-decoration: underline
-//.right_content
-//  font-size: 13px
-//  font-family: "Arial"
-//  color: rgb( 98, 98, 98 )
-//  line-height: 1.231
-//  margin: 20px 0 0 302px
-//  width: 213px
-//  max-height: 140px
-//.price
-//  font-size: 20px
-//  font-family: "Arial"
-//  color: rgb( 0, 0, 0 )
-//  margin: 23px 0 0 303px
-//.content
-//  width: 1400px
-//  height: auto
-//  padding-bottom: 60px
-//
-////.tour_offers
-//
-//.tours_title
-//  font-size: 16px
-//  font-family: "Arial"
-//  color: rgb( 0, 0, 0 )
-//  font-weight: bold
-//  margin-top: 28px
-//
-//.tours_block
-//  display: inline-block
-//  width: 282px
-//  height: 234px
-//  margin-top: 25px
-//  padding-right: 28px
-//
-//.tours_block_title
-//  font-size: 16px
-//  font-family: "Arial"
-//  font-weight: bold
-//  margin-top: 12px
-//  a
-//    color: rgb( 14, 96, 160 )
-//    text-decoration: underline
-//.tours_price
-//  font-size: 16px
-//  font-family: "Arial"
-//  color: rgb( 0, 0, 0 )
-//.all_tours
-//  font-size: 16px
-//  font-family: "Arial"
-//  margin-top: 30px
-//  a
-//    color: rgb( 14, 96, 160 )
-//    text-decoration: underline
-//.country
-//  margin-top: 51px
-//.country_block
-//  display: inline-block
-//  min-width: 137px
-//  width: auto
-//.flag
-//  float: left
-//  width: 24px
-//  height: 16px
-//.flag_title
-//  //width: 65px
-//  //float: right
-//  font-size: 16px
-//  font-family: "Arial"
-//  font-weight: bold
-//  line-height: 2.25
-//  margin: -7px 0px 8px 32px
-//  a
-//    color: rgb( 14, 96, 160 )
-//    text-decoration: underline
-////.tour_type
-//.tour_type_title
-//  font-size: 16px
-//  font-family: "Arial"
-//  color: rgb( 0, 0, 0 )
-//  font-weight: bold
-//  width: 221px
-//  margin-top: 28px
-//.tour_type_item
-//  font-size: 16px
-//  font-family: "Arial"
-//  margin: 19px 0px -8px 0px
-//  a
-//    color: rgb( 14, 96, 160 )
-//    text-decoration: underline
-//
-////.news
-//.news_title
-//  margin-top: 46px
-//  font-size: 16px
-//  font-family: "Arial"
-//  color: rgb( 0, 0, 0 )
-//  font-weight: bold
-//.news_date
-//  margin: 18px 0px 3px 3px
-//  font-size: 14px
-//  font-family: "Arial"
-//  color: rgb( 167, 167, 167 )
-//.news_item
-//  margin-top: 4px
-//  font-size: 14px
-//  font-family: "Arial"
-//  line-height: 20px
-//  a
-//    color: rgb( 14, 96, 160 )
-//    text-decoration: underline
-//
-//.all_news
-//  margin-top: 20px
-//  font-size: 14px
-//  font-family: "Arial"
-//  font-weight: bold
-//  line-height: 1.286
-//  a
-//    color: rgb( 14, 96, 160 )
-//    text-decoration: underline
-//.bottom-panel
-//  background-image: url("/assets/bg-footer.png")
-//  width: 1400px
-//  height: 205px
-//
-//.footer
-//  margin-top: 43px
-//
-//.copy_right
-//  margin: 0 0 0 122px
-//  width: 177px
-//  font-size: 15px
-//  font-family: "Arial"
-//  color: rgb( 0, 0, 0 )
-//
-//
-//.menu_footer
-//  font-size: 16px
-//  font-family: "Arial"
-//  //font-weight: bold
-//  margin: -21px 0 0 310px
-//  a
-//    color: #595959
-//    text-decoration: underline
-//
-//.menu_item_footer
-//  display: inline-block
-//  padding-right: 19px
-//.phone_footer
-//  font-size: 13px
-//  font-family: "Arial"
-//  color: rgb( 131, 131, 131 )
-//  margin: 29px 0px 0px  327px
-//  width: 300px
-//.number_footer
-//  font-size: 15px
-//  font-family: "Arial"
-//  color: rgb( 0, 0, 0 )
-//  width: 268px
-//  padding-right: 13px
-//
-//
-//.adress_footer
-//  margin: -61px 0px 0px 625px
-//  font-size: 13px
-//  font-family: "Arial"
-//  color: rgb( 131, 131, 131 )
-//  width: 400px
-//.adress_line_footer
-//  font-size: 15px
-//  font-family: "Arial"
-//  width: 400px
-//  height: 15px
-//  a
-//    color: rgb( 14, 96, 160 )
-//    text-decoration: underline
