--- a/app/views/layouts/_attention.html.haml
+++ b/app/views/layouts/_attention.html.haml
@@ -1,9 +1,10 @@
-.attention
-  %h2 Обратите внимание
-  - @attention.each do |f|
-    .attention-item.clearfix
-      = image_tag(f.tour_images.general.image.url(:small))
-      .attention-info
-        %h3= link_to f.title, tour_path(f)
-        %span
-          от #{number_to_currency(f.price, precision:0)}
+- unless @attention.nil?
+  .attention
+    %h2 Обратите внимание
+    - @attention.each do |f|
+      .attention-item.clearfix
+        = image_tag(f.tour_images.general.image.url(:small))
+        .attention-info
+          %h3= link_to f.title, tour_path(f), title: "#{f.title}"
+          %span
+            от #{number_to_currency(f.price, precision:0)}
