--- a/app/views/layouts/_country.html.haml
+++ b/app/views/layouts/_country.html.haml
@@ -1,16 +1,7 @@
-.country-block
-  %ul
-    - @countries.each do |country|
-      %li
-        %span.flag{country: "#{country.title}"}
-        = link_to country.title, tours_path(country: country.id)
-
-        -#%span{ class: country.title.parametrize } #россия => rossia
-        -#
-        -## css
-        -#
-        -#span
-        -#  background-image:
-        -#  &.russia
-        -#    background-position: 0 -12px
-        -#  &.ukraina
+- unless @countries.nil?
+  .country-block
+    %ul
+      - @countries.each do |country|
+        %li
+          %span.flag{country: "#{country.title}"}
+          = link_to country.title, tours_path(country: country.id), title: "#{country.title}"
