--- a/app/views/layouts/_home_panel.html.haml
+++ b/app/views/layouts/_home_panel.html.haml
@@ -1,10 +1,12 @@
 .home-left
-  = raw @home.content
+  - unless @home.nil?
+    = raw @home.content
 .home-right.clearfix
-  .active-left
-    = image_tag(@tour.tour_images.general.image.url(:big))
-  .active-right
-    %h2=link_to @tour.title, tour_path(@tour)
-    %p= @tour.preview
-    %span
-      от #{number_to_currency(@tour.price, precision: 0)}
+  - unless @tour.nil?
+    .active-left
+      = image_tag(@tour.tour_images.general.image.url(:big))
+    .active-right
+      %h2=link_to @tour.title, tour_path(@tour), title: "#{@tour.title}"
+      %p= @tour.preview
+      %span
+        от #{number_to_currency(@tour.price, precision: 0)}
