--- a/app/views/layouts/_news.html.haml
+++ b/app/views/layouts/_news.html.haml
@@ -1,9 +1,10 @@
-.news
-  %h2Новости
-  %ul
-    - @news.each do |news|
-      %li
-        %span= Russian::strftime(news.created_at, "%e %B %Y")
-        %h3= link_to news.title , news_path(news)
+- unless @news.nil?
+  .news
+    %h2Новости
+    %ul
+      - @news.each do |news|
+        %li
+          %span= Russian::strftime(news.created_at, "%e %B %Y")
+          %h3= link_to news.title , news_path(news), title: "#{news.title}"
 
-  %p= link_to "Архив новостей", news_index_path
+    %p= link_to "Архив новостей", news_index_path, title: "Архив новостей"
