--- a/app/views/news/show.html.haml
+++ b/app/views/news/show.html.haml
@@ -1,9 +1,11 @@
 .left.static-page-left
-  .static-content
-    %h3= @news_item.title
-    %p=  raw @news_item.content
-    %p=  Russian::strftime(@news_item.created_at, "%e %B %Y")
-    %p= link_to "Все новости", news_index_path
+  .static-content.news-show
+    - unless @news_item.nil?
+      %h2= @news_item.title
+      %p=  raw @news_item.content
+      %p.news-date=  Russian::strftime(@news_item.created_at, "%e %B %Y")
+      = render partial: 'layouts/share'
+      %p.all-news-link= link_to "Все новости", news_index_path, title: "Все новости"
 .right.static-page-right
   = render partial: 'layouts/tour_type'
   = render partial: 'layouts/news'
