--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -1,7 +1,8 @@
 .left.static-page-left
-  %h1 Заказ тура
-  %h2= @tour.title
-  = render 'form'
+  .order
+    %h1 Страница заказа тура
+    %h2 Ваш тур: #{@tour.title}
+    = render 'form'
 .right.static-page-right
   = render partial: 'layouts/tour_type'
   = render partial: 'layouts/news'
