--- a/app/views/requests/new.html.haml
+++ b/app/views/requests/new.html.haml
@@ -1,6 +1,7 @@
 .left.static-page-left
-  %h1 Заявка на тур
-  = render 'form'
+  .order
+    %h1 Заявка на тур
+    = render 'form'
 .right.static-page-right
   = render partial: 'layouts/tour_type'
   = render partial: 'layouts/news'
