--- a/app/views/static_pages/contacts.html.haml
+++ b/app/views/static_pages/contacts.html.haml
@@ -1,7 +1,9 @@
 .left.static-page-left
   .static-content
-    %h1= @contacts.title
-    = raw @contacts.content
+    - unless @contacts.nil?
+      %h1= @contacts.title
+      = raw @contacts.content
+      = render partial: 'layouts/share'
 .right.static-page-right
   = render partial: 'layouts/tour_type'
   = render partial: 'layouts/news'
