--- a/app/views/static_pages/for_tourists.html.haml
+++ b/app/views/static_pages/for_tourists.html.haml
@@ -1,7 +1,9 @@
 .left.static-page-left
   .static-content
-    %h1= @for_tourists.title
-    = raw @for_tourists.content
+    - unless @for_tourists.nil?
+      %h1= @for_tourists.title
+      = raw @for_tourists.content
+      = render partial: 'layouts/share'
 .right.static-page-right
   = render partial: 'layouts/tour_type'
   = render partial: 'layouts/news'
