--- a/app/views/visas/index.html.haml
+++ b/app/views/visas/index.html.haml
@@ -1,9 +1,10 @@
 .left.static-page-left
-  .static-content
-    %h1 Визы
-    - @visas.each do |visa|
-      %ul
-        %li= link_to visa.title, visa_path(visa)
+  .static-content.visas
+    - unless @visas.nil?
+      %h1 Визы
+      - @visas.each do |visa|
+        %ul
+          %li= link_to visa.title, visa_path(visa), title: "#{visa.title}"
 
 .right.static-page-right
   = render partial: 'layouts/tour_type'
