--- a/app/views/news/show.html.haml
+++ b/app/views/news/show.html.haml
@@ -1,6 +1,6 @@
 .left.static-page-left
   .static-content.news-show
-    - unless @news_item.nil?
+    - if @news_item.present?
       %h2= @news_item.title
       %p=  raw @news_item.content
       %p.news-date=  Russian::strftime(@news_item.created_at, "%e %B %Y")
