--- a/app/assets/stylesheets/import/main.sass
+++ b/app/assets/stylesheets/import/main.sass
@@ -7,8 +7,8 @@ body
   a
     color: #0e60a0
     text-decoration: underline
-    //text-decoration: none
-    //border-bottom: 1px solid #0e60a0
+//text-decoration: none
+//border-bottom: 1px solid #0e60a0
 
 .bold
   font-weight: bold
@@ -21,13 +21,16 @@ body
   margin-left: 16px
   color: red
 .order
-  width: 400px
-  margin: 0 auto
+  h2
+    font-size: 15px
+#request_notation
+  width: 560px
+  height: 160px
 .order-button
   width: 200px
   color: #ffffff
   font-size: 16px
-    float: left
+  float: left
   border-style: solid
   border-width: 1px
   border-color: rgb(86, 131, 166)
@@ -198,7 +201,7 @@ body
 .right
   float: left
   width: 320px
-  //padding-top: 36px
+//padding-top: 36px
 
 .tour-type
   width: 291px
@@ -398,9 +401,10 @@ body
       margin-bottom: 10px
       list-style-type: none
 .news-show
-  h2
+  h1
     line-height: 24px
     font-size: 20px
+    margin-bottom: 20px
 .news-date
   font-style: oblique
   text-align: right
@@ -429,12 +433,6 @@ body
       margin-bottom: 10px
     dd
       margin-bottom: 10px
-      //span
-      //  font-style: oblique
-      //  text-align: right
-.order
-  h2
-    font-size: 15px
-
-
-
+//span
+//  font-style: oblique
+//  text-align: right
