--- a/app/assets/stylesheets/import/main.sass
+++ b/app/assets/stylesheets/import/main.sass
@@ -26,6 +26,9 @@ body
 #request_notation
   width: 560px
   height: 160px
+#order_notation
+  width: 560px
+  height: 160px
 .order-button
   width: 200px
   color: #ffffff
