fixing price title

--- a/app/assets/stylesheets/import/main.sass
+++ b/app/assets/stylesheets/import/main.sass
@@ -363,9 +363,11 @@ body
   width: 560px
   //img
   //  margin-bottom: 29px
+  strong
+    margin-left: 21px
+    font-size: 20px
   span
     font-size: 20px
-    margin-left: 21px
 .fotorama
   margin-bottom: 29px
   box-shadow: 0 0 5px gray
