--- a/app/views/tours/show.html.haml
+++ b/app/views/tours/show.html.haml
@@ -6,7 +6,8 @@
         .fotorama{'data-loop'=>"true", 'data-nav'=>"none", 'data-width'=>"560", 'data-height'=>"272"}
           - @tour.tour_images.each do |i|
             = image_tag(i.image.url(:wbig))
-        %span Стоимость тура: от #{number_to_currency(@tour.price, precision: 0)}
+        %strong Стоимость тура:
+        %span от #{number_to_currency(@tour.price, precision: 0)}
         .tour-button
           = link_to "Заказать", new_tour_order_path(@tour), title: "Заказать тур"
       = raw @tour.overview
