--- a/app/assets/stylesheets/import/main.sass
+++ b/app/assets/stylesheets/import/main.sass
@@ -394,9 +394,11 @@ body
 .share
   display: inline-block
   margin-top: 15px
+  a
+    margin-right: 10px
 
-.share_vk, .share_gp, .share_fb, .share_tw
-  float: left
+//.share_vk, .share_gp, .share_fb, .share_tw
+//  float: left
 .visas
   h1
     line-height: 24px
