add validates, fixing image, flag

--- a/app/assets/stylesheets/import/main.sass
+++ b/app/assets/stylesheets/import/main.sass
@@ -194,10 +194,11 @@ body
       margin-right: 36px
       margin-bottom: 16px
       display: inline-block
-      span
-        margin-right: 8px
       a
         font-size: 16px
+        padding-left: 32px
+        padding-bottom: 6px
+        padding-top: 3px
 .right
   float: left
   width: 320px
