fixing active_admin

--- a/app/views/orders/_form.html.haml
+++ b/app/views/orders/_form.html.haml
@@ -4,7 +4,7 @@
       %h2= 'При заполнении формы возникли ошибки!'
   .form-inputs
     = f.input :name, placeholder: 'Ваше имя', label: 'Ваше имя:'
-    = f.input :phone, placeholder: '+375 29 203 55 93',label: 'Ваш номер телефон:'
+    = f.input :phone, placeholder: '+375 29 203 55 93',label: 'Ваш номер телефона:'
     = f.input :email, placeholder: 'Email', label: 'Email'
     = f.input :notation, as: :text, placeholder: 'дата тура и любая другая информация', label: 'Примечание:'
   .actions
