--- a/app/assets/stylesheets/import/main.sass
+++ b/app/assets/stylesheets/import/main.sass
@@ -41,8 +41,9 @@ body
   background-image: -webkit-linear-gradient(90deg, rgb(76, 138, 186) 0%, rgb(143, 190, 226) 100%)
   background-image: -ms-linear-gradient(90deg, rgb(76, 138, 186) 0%, rgb(143, 190, 226) 100%)
   text-align: center
-  line-height: 40px
+  line-height: 30px
   margin-top: 15px
+  height: 40px
 .container
   width: 960px
   margin: 0 auto
@@ -345,6 +346,8 @@ body
 .m-email
   background: url("/assets/m-email.png") no-repeat
   padding-left: 25px
+  text-decoration: underline
+
 .show-tour-left
   margin-top: -17px
 .show-tour
