--- a/app/assets/stylesheets/import/main.sass
+++ b/app/assets/stylesheets/import/main.sass
@@ -5,8 +5,11 @@ body
   padding: 0!important
   min-width: 1024px
   a
+
     color: #0e60a0
     text-decoration: underline
+  a:hover
+    text-decoration: none
 //text-decoration: none
 //border-bottom: 1px solid #0e60a0
 
