--- a/app/views/tours/index.html.haml
+++ b/app/views/tours/index.html.haml
@@ -4,7 +4,7 @@
       %h1 Наши предложения
       - @tours.each do |tour|
         .all-tour.clearfix
-          = image_tag(tour.tour_images.general.image.url(:medium))
+          =link_to image_tag(tour.tour_images.general.image.url(:medium)), tour_path(tour), title: "Фото | #{tour.title}"
           .all-tour-info
             %h2= link_to tour.title, tour_path(tour), title: "#{tour.title}"
             %span
