--- a/app/assets/stylesheets/import/main.sass
+++ b/app/assets/stylesheets/import/main.sass
@@ -299,6 +299,8 @@ body
     line-height: 1px
 .static-content
   width: 573px
+  word-wrap: break-word
+  padding: 0
 .static-page-right
   padding-top: 52px
   padding-bottom: 68px
@@ -356,6 +358,8 @@ body
 .show-tour
   width: 560px
   margin-bottom: 30px
+  word-wrap: break-word
+  padding: 0
   h1
     margin-bottom: 28px
     font-size: 27px
@@ -372,6 +376,11 @@ body
     font-size: 20px
   span
     font-size: 20px
+//.overview
+//  width: 560px
+//  word-wrap: break-word
+//  padding: 0
+//  word-break: break-all
 .fotorama
   margin-bottom: 29px
   box-shadow: 0 0 5px gray
@@ -404,6 +413,9 @@ body
 //.share_vk, .share_gp, .share_fb, .share_tw
 //  float: left
 .visas
+  width: 573px
+  word-wrap: break-word
+  padding: 0
   h1
     line-height: 24px
   ul
@@ -412,6 +424,9 @@ body
       margin-bottom: 10px
       list-style-type: none
 .news-show
+  width: 573px
+  word-wrap: break-word
+  padding: 0
   h1
     line-height: 24px
     font-size: 20px
