--- a/app/views/tours/index.html.haml
+++ b/app/views/tours/index.html.haml
@@ -4,11 +4,15 @@
       %h1 Наши предложения
       - @tours.each do |tour|
         .all-tour.clearfix
-          =link_to image_tag(tour.tour_images.general.image.url(:medium)), tour_path(tour), title: "Фото | #{tour.title}"
+          - first_image = tour.tour_images.where(active: true).first if tour.tour_images.where(active: true)
+          - if first_image
+            = link_to image_tag(first_image.image.url(:medium)), tour_path(tour), title: "Фото | #{tour.title}"
+          - else
+            = link_to "Нет фото", tour_path(tour), title: "Фото | #{tour.title}"
           .all-tour-info
             %h2= link_to tour.title, tour_path(tour), title: "#{tour.title}"
             %span
-              Цена от #{number_to_currency(tour.price, precision:0)}
+              Цена от #{tour.price} #{tour.currency}
 .right.static-page-right
   = render partial: 'layouts/tour_type'
   = render partial: 'layouts/news'
