--- a/app/views/visas/index.html.haml
+++ b/app/views/visas/index.html.haml
@@ -5,7 +5,7 @@
       - @visas.each do |visa|
         %ul
           %li= link_to visa.title, visa_path(visa), title: "#{visa.title}"
-
+      = paginate @visas
 .right.static-page-right
   = render partial: 'layouts/tour_type'
   = render partial: 'layouts/news'
