add ckeditor doc upload fixing order news

--- a/app/assets/stylesheets/import/main.sass
+++ b/app/assets/stylesheets/import/main.sass
@@ -360,7 +360,7 @@ body
   margin-bottom: 30px
   word-wrap: break-word
   padding: 0
-  overflow: auto
+  //overflow: auto
   h1
     margin-bottom: 28px
     font-size: 27px
@@ -377,11 +377,12 @@ body
     font-size: 20px
   span
     font-size: 20px
-//.overview
-//  width: 560px
-//  word-wrap: break-word
-//  padding: 0
-//  word-break: break-all
+.overview
+  overflow: auto
+  width: 560px
+  word-wrap: break-word
+  padding: 0
+  //word-break: break-all
 .fotorama
   margin-bottom: 29px
   box-shadow: 0 0 5px gray
