--- a/app/assets/stylesheets/import/main.sass
+++ b/app/assets/stylesheets/import/main.sass
@@ -345,11 +345,13 @@ body
     font-size: 13px
     margin-bottom: 10px
 .m-phone
-  background: url("/assets/m-phone.png") no-repeat
+  background-image: url("/assets/m-phone.png")
+  background-repeat: no-repeat
   padding-left: 28px
   margin-bottom: 10px
 .m-email
-  background: url("/assets/m-email.png") no-repeat
+  background-image: url("/assets/m-email.png")
+  background-repeat: no-repeat
   padding-left: 25px
   text-decoration: underline
 
@@ -370,13 +372,14 @@ body
   padding-bottom: 20px
   background-color: #e9f1f6
   width: 560px
-  //img
-  //  margin-bottom: 29px
   strong
     margin-left: 21px
     font-size: 20px
   span
     font-size: 20px
+.fotorama
+  img
+    position: relative
 .overview
   overflow: auto
   width: 560px
