fixing production settings

--- a/app/assets/stylesheets/import/main.sass
+++ b/app/assets/stylesheets/import/main.sass
@@ -125,7 +125,7 @@ body
 .home-panel
   padding: 34px 0px
   background-color: #e9f1f6
-  background-image: url("/assets/bg-home-panel.png")
+  background-image: url(asset_path('bg-home-panel.png', image))
   background-repeat: repeat-x
 .home-left
   float: left
@@ -248,7 +248,7 @@ body
   p
     font-weight: bold
 .footer-panel
-  background-image: url("/assets/bg-footer.png")
+  background-image: url(asset_path('bg-footer.png', image))
   background-repeat: repeat-x
   padding: 39px 0
   background-color: #f0f0f0
@@ -345,12 +345,12 @@ body
     font-size: 13px
     margin-bottom: 10px
 .m-phone
-  background-image: url("/assets/m-phone.png")
+  background-image: url(asset_path('m-phone.png', image))
   background-repeat: no-repeat
   padding-left: 28px
   margin-bottom: 10px
 .m-email
-  background-image: url("/assets/m-email.png")
+  background-image: url(asset_path('m-email.png', image))
   background-repeat: no-repeat
   padding-left: 25px
   text-decoration: underline
