fix some tour partial

--- a/app/views/layouts/_similar_tours_block.html.haml
+++ b/app/views/layouts/_similar_tours_block.html.haml
@@ -6,7 +6,7 @@
         .tours-item
           - first_image = tour.tour_images.where(active: true).first if tour.tour_images.where(active: true)
           - if first_image
-            = link_to image_tag(first_image.tour_images.general.image.url(:medium)), tour_path(tour), title: "Фото | #{tour.title}"
+            = link_to image_tag(first_image.image.url(:medium)), tour_path(tour), title: "Фото | #{tour.title}"
           - else
             = link_to "Нет фото", tour_path(tour), title: "Фото | #{tour.title}"
           %h3= link_to tour.title, tour_path(tour), title: "#{tour.title}"
