--- a/app/views/layouts/_attention.html.haml
+++ b/app/views/layouts/_attention.html.haml
@@ -3,9 +3,8 @@
     %h2 Обратите внимание
     - @attention.each do |f|
       .attention-item.clearfix
-        - first_image = f.tour_images.where(active: true).first if f.tour_images.where(active: true)
-        - if first_image
-          = link_to image_tag(first_image.image.url(:small)), tour_path(f), title: "Фото | #{f.title}"
+        - if !!f.tour_images.general
+          = link_to image_tag(f.tour_images.general.image.url(:small)), tour_path(f), title: "Фото | #{f.title}"
         - else
           = link_to "Нет фото", tour_path(f), title: "Фото | #{f.title}"
         .attention-info
