--- a/app/views/layouts/_tours_block.html.haml
+++ b/app/views/layouts/_tours_block.html.haml
@@ -4,9 +4,8 @@
     .masonry-block
       - @tours.each do |tour|
         .tours-item
-          - first_image = tour.tour_images.where(active: true).first if tour.tour_images.where(active: true)
-          - if first_image
-            = link_to image_tag(first_image.image.url(:medium)), tour_path(tour), title: "Фото | #{tour.title}"
+          - if !!tour.tour_images.general
+            = link_to image_tag(tour.tour_images.general.image.url(:medium)), tour_path(tour), title: "Фото | #{tour.title}"
           - else
             = link_to "Нет фото", tour_path(tour), title: "Фото | #{tour.title}"
           %h3= link_to tour.title, tour_path(tour), title: "#{tour.title}"
